--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button class="operator-button">*</button>
             <button class="operator-button">/</button>
             <button class="operator-button" id="clear-button">C</button>
-            <button class="operator-button" id="equal-button">=</button>
+            <button id="equal-button">=</button>
         </div>
         
 
