--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="operator-button">/</button>
             <button class="operator-button" id="clear-button">C</button>
             <button id="equal-button">=</button>
+            <button id="backspace-button">DEL</button>
         </div>
         
 
